| Bug #18781 | database drop during restart of failed data node cause data node failure | ||
|---|---|---|---|
| Submitted: | 4 Apr 2006 20:33 | Modified: | 12 Jul 2006 12:31 |
| Reporter: | Jonathan Miller | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S2 (Serious) |
| Version: | 5.0 -> | OS: | Linux (Linux 32 Bit OS) |
| Assigned to: | Pekka Nousiainen | CPU Architecture: | Any |
[4 Apr 2006 20:33]
Jonathan Miller
[18 Apr 2006 6:02]
Jonas Oreland
create/drop/alter table during nodestartup is not supported. Never has been. However, it's quite easy to fix, that why I kept the bug report open for quite a while...havent decided if I should just document or fix
[18 Apr 2006 10:41]
Jonathan Miller
Problem is that in a large cluster, an admin could be trying to recover a node while some one in a different office is adding or dropping. We need some type of fix here, even if it is to reject the add or drop while recovery happens.
[8 Jun 2006 14:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7400
[11 Jun 2006 18:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7499
[22 Jun 2006 17:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8091
[29 Jun 2006 7:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8452
[8 Jul 2006 11:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8952
[9 Jul 2006 16:57]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8965
[10 Jul 2006 11:44]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8988
[10 Jul 2006 12:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8991
[12 Jul 2006 12:31]
Jon Stephens
Documented in 5.0.25/5.1.12 changelogs. NOTE: This fix will now appear in 5.0.25 due to the cancellation of 5.0.23.
