ndb - bug#18781 lock DICT during node restart